refactor: update zed

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,10 +7,20 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
+  "features": {
+    "edit_prediction_provider": "zed"
+  },
+  "assistant": {
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-3-5-sonnet-latest"
+    },
+    "version": "2"
+  },
   "telemetry": {
     "metrics": true
   },
-  "vim_mode": false,
+  "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 16,
   "theme": {
@@ -18,5 +28,5 @@
     "light": "One Light",
     "dark": "One Dark"
   },
-  "format_on_save": "off"
+  "format_on_save": "on"
 }
