--- a/zed/settings.json
+++ b/zed/settings.json
@@ -10,10 +10,16 @@
   "features": {
     "edit_prediction_provider": "zed"
   },
+  "show_inline_completions": false,
+  "languages": {
+    "Rust": {
+      "show_inline_completions": false
+    }
+  },
   "assistant": {
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-3-5-sonnet-latest"
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
     },
     "version": "2"
   },
@@ -22,7 +28,7 @@
   },
   "vim_mode": true,
   "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "buffer_font_size": 13.0,
   "theme": {
     "mode": "system",
     "light": "One Light",
