--- a/zed/settings.json
+++ b/zed/settings.json
@@ -17,7 +17,7 @@
     }
   },
   "agent": {
-    "default_profile": "write",
+    "default_profile": "ask",
     "default_model": {
       "provider": "copilot_chat",
       "model": "gpt-4o"
@@ -35,5 +35,5 @@
     "light": "One Light",
     "dark": "One Dark"
   },
-  "format_on_save": "on"
+  "format_on_save": "off"
 }
