--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,13 +15,12 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor= eDP-1, 1920x1080@120, 0x0, 1
+monitor = eDP-1, 1920x1080@120, 0x0, 1
 monitor = DP-1, 2560x1600@60, 0x-1600, 1
 
 
@@ -53,6 +52,7 @@ exec-once = $terminal
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = /usr/lib/dunst
 exec-once = waybar
+exec-once = hyprpaper
 
 
 #############################
@@ -146,7 +146,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = no, please :)
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
@@ -200,10 +200,10 @@ master {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
+# misc {
+#     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+#     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+# }
 
 
 #############
@@ -245,19 +245,26 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, O, exec, $notes
+bind = $mainMod, SPACE, exec, hyprlauncher
 bind = $mainMod, W, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, Q, exit,
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
+
+# Move windows around
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, k, movewindow, u
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -283,6 +290,9 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod SHIFT, comma, movecurrentworkspacetomonitor, 1
+bind = $mainMod SHIFT, period, movecurrentworkspacetomonitor, 0
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -302,6 +312,11 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+
+# Overriding laptop multimedia keys because they don't fking work
+bind = $mainMod SHIFT, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bind = $mainMod SHIFT, U, exec, brightnessctl -e4 -n2 set 5%+
+# bind = $mainMod SHIFT, D, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
