--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,7 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor= eDP-1, 1920x1080@120, 0x0, 1
-monitor = DP-1, 2560x1600@60, 0x-1080, 1
+monitor = DP-1, 2560x1600@60, 0x-1600, 1
 
 
 ###################
@@ -213,6 +213,9 @@ misc {
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us
+    kb_options = caps:escape
+    repeat_delay = 200
+    repeat_rate = 40
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     touchpad {
