--- a/jj/config.toml
+++ b/jj/config.toml
@@ -8,4 +8,14 @@ email = "kamzhanyue@gmail.com"
 editor = "nvim"
 pager = "delta"
 diff-formatter = ":git"
+diff-editor = "meld"
+merge-editor = "meld"
 
+[revset-aliases]
+'closest_pushable(to)' = 'heads(::to & mutable() & ~description(exact:"") & (~empty() | merges()))'
+
+[aliases]
+tug = 'bookmark move --from "heads(::@ & bookmarks())" --to "closest_pushable(@)"'
+pr = ["util", "exec", "--", "bash", "-c", """
+gh pr create --head $(jj log -r 'closest_bookmark(@)' -T 'bookmarks' --no-graph | cut -d ' ' -f 1)
+"""]
