--- a/jj/config.toml
+++ b/jj/config.toml
@@ -19,3 +19,16 @@ tug = 'bookmark move --from "heads(::@ & bookmarks())" --to "closest_pushable(@)
 pr = ["util", "exec", "--", "bash", "-c", """
 gh pr create --head $(jj log -r 'closest_bookmark(@)' -T 'bookmarks' --no-graph | cut -d ' ' -f 1)
 """]
+
+
+[fix.tools.ruff]
+command = ["uv", "run", "ruff", "format", "--stdin-filename", "$path", "-"]
+patterns = ["glob:'**/*.py'"]
+
+[fix.tools.ruff-check]
+command = ["uv", "run", "ruff", "check", "--fix", "--stdin-filename", "$path", "-"]
+patterns = ["glob:'**/*.py'"]
+
+[fix.tools.biome-check]
+command = ["bun", "biome", "check", "--fix", "--diagnostic-level=error", "--stdin-file-path", "$path"]
+patterns = ["glob:'**/*.tsx'", "glob:'**/*.ts'", "biome.json"]
