add gpg signing

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,7 @@
 [user]
 	name = Alex Kam
 	email = kamzhanyue@gmail.com
+	signingkey = 27962C46FEB99189
 [alias]
  s = status
  a = add .
@@ -32,3 +33,7 @@
     navigate = true  # use n and N to move between diff sections
     dark = true      # or light = true, or omit for auto-detection
 
+[commit]
+	gpgsign = true
+[tag]
+	gpgSign = true
