add gpg key to jj

--- a/jj/config.toml
+++ b/jj/config.toml
@@ -23,6 +23,7 @@ gh pr create --head $(jj log -r 'closest_bookmark(@)' -T 'bookmarks' --no-graph 
 [signing]
 behaviour = "own"
 backend = "gpg"
+key = "27962C46FEB99189"
 
 
 [fix.tools.ruff]
