--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -40,9 +40,10 @@
 
 [include]
   path=~/.gitconfig.local
+
 [credential "https://github.com"]
 	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !gh auth git-credential
