add keybindings for keyboard brightness

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -312,6 +312,9 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86KbdBrightnessUp, exec, brightnessctl -d *::kbd_backlight s +1
+bindel = ,XF86KbdBrightnessDown, exec, brightnessctl -d *::kbd_backlight s 1-
+
 
 # Overriding laptop multimedia keys because they don't fking work
 bind = $mainMod SHIFT, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -339,3 +342,16 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+#################
+### DARK MODE ###
+#################
+#for libadwaita gtk4 apps you can use this command:
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+#for gtk3 apps you need to install adw-gtk3 theme (in arch linux sudo pacman -S adw-gtk-theme)
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
+
+#for kde apps you need to install: sudo pacman -S qt5ct qt6ct kvantum kvantum breeze-icons   
+#you will need to set dark theme for qt apps from kde more difficult thans with gnome :D:
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
